RESOLVED FIXED 189730
[Win][Clang] JITMathIC.h: error: missing 'template' keyword prior to dependent template name 'retagged'
https://bugs.webkit.org/show_bug.cgi?id=189730
Summary [Win][Clang] JITMathIC.h: error: missing 'template' keyword prior to dependen...
Fujii Hironori
Reported 2018-09-18 20:21:29 PDT
[Win][Clang] JITMathIC.h: error: missing 'template' keyword prior to dependent template name 'retagged' While doing Bug 171618, following compilation error is reported. > [4/1360] Building CXX object Source\JavaScriptCore\CMakeFiles\JavaScriptCore.dir\__\__\DerivedSources\JavaScriptCore\unified-sources\UnifiedSource80.cpp.obj > FAILED: Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/__/__/DerivedSources/JavaScriptCore/unified-sources/UnifiedSource80.cpp.obj > C:\tools\llvm\bin\clang-cl.exe (...) -c DerivedSources\JavaScriptCore\unified-sources\UnifiedSource80.cpp > In file included from DerivedSources\JavaScriptCore\unified-sources\UnifiedSource80.cpp:1: > In file included from ..\..\Source\JavaScriptCore\jit/JITOpcodes.cpp:29: > ..\..\Source\JavaScriptCore\jit/JIT.h(745,31): warning: explicit specialization cannot have a storage class > static constexpr bool is64BitType<void>() { return true; } > ~~~~~~~ ^ > In file included from DerivedSources\JavaScriptCore\unified-sources\UnifiedSource80.cpp:1: > In file included from ..\..\Source\JavaScriptCore\jit/JITOpcodes.cpp:29: > In file included from ..\..\Source\JavaScriptCore\jit/JIT.h:44: > ..\..\Source\JavaScriptCore\jit/JITMathIC.h(148,72): error: missing 'template' keyword prior to dependent template name 'retagged' > ftlThunkAwareRepatchCall(codeBlock, slowPathCallLocation().retagged<JSInternalPtrTag>(), callReplacement); > ^ ~~~~~~~~~~~~~~~~~~ > 1 warning and 1 error generated.
Attachments
Patch (1.53 KB, patch)
2018-09-18 20:38 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2018-09-18 20:38:42 PDT
Fujii Hironori
Comment 2 2018-09-20 00:44:13 PDT
Comment on attachment 350090 [details] Patch Clearing flags on attachment: 350090 Committed r236248: <https://trac.webkit.org/changeset/236248>
Fujii Hironori
Comment 3 2018-09-20 00:44:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-09-20 00:45:27 PDT
Note You need to log in before you can comment on or make changes to this bug.