[Win][Clang] JITMathIC.h: error: missing 'template' keyword prior to dependent template name 'retagged' https://bugs.webkit.org/show_bug.cgi?id=189730

Reviewed by Saam Barati.

Clang for Windows can't compile the workaround for MSVC quirk in generateOutOfLine.

* jit/JITMathIC.h:
(generateOutOfLine): Append "&& !COMPILER(CLANG)" to "#if COMPILER(MSVC)".

Canonical link: https://commits.webkit.org/204727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236248 268f45cc-cd09-0410-ab3c-d52691b4dbfc